27 Jun 2003 Framework for ALS4 features - Roger Bowler
26 Jun 2003 Check for physical shared object when loading dll - Jan Jaeger
26 Jun 2003 Fix Win32 hdl case-sensitivity bug - Fish
26 Jun 2003 TT32 CTCI fixes: 1) fix ACCESS_VIOLATION caused by NULL ptr
            being returned by 'tt32_get_default_iface', 2) 'tt32stats_cmd'
            temporarily fixed by fixing bug in 'CTCI_Init' and adding temp
            workaround code to 'display_tt32_stats' function to work around
            bug in TunTap32.dll, 3) add some code to try and resolve bogus
            "HHCCT048E" message being issued at close/shutdown.
25 Jun 2003 shared device version/release checking - Greg Smith
25 Jun 2003 micro performance update in branch on condition - Bernard van der Helm
25 Jun 2003 Fix unlikely but serious fthreads bug in wait_condition - Fish
25 Jun 2003 Move external gui logic from panel_display to dyngui.c, and
            modify build process (makefile.am) to automatically build
            new dyngui.dll (and dyninst.dll too) - Fish
25 Jun 2003 Add dyninst qualifier to dynamic instr. symbol names - Jan Jaeger
23 Jun 2003 Fix interrupt queue problem in haltio - Fish (by Greg Smith)
17 Jun 2003 dyninst now supports dynamic instruction update - Jan Jaeger
15 Jun 2003 Add dynamic module preloading - Jan Jaeger
15 Jun 2003 Add version and dependency checks to dynamic loader - Jan Jaeger
11 Jun 2003 More message numbers - Greg Smith
05 Jun 2003 Dynamic loader support - Jan Jaeger
05 Jun 2003 Preliminary substitution capabilities in config file.
            Substitution format is $(varname).
            Current vars are cuu,ccuu,CUU,CCUU - Ivan Warren
04 Jun 2003 Device number specification extension. Device numbers are now
            CUU or CUU-CUU or CUU.count or CUU,CUU or a combination
            of the above - Ivan Warren
01 Jun 2003 Updated hercconf.html page to include ECPS:VM,
            2703, 3410, 3490, 9347 D/T and explanation for